hphp/test/slow/namespace/dynamic_extra_slash_func.php.expectf

Fatal error: Call to undefined function \\A\f() in %s/test/slow/namespace/dynamic_extra_slash_func.php on line 10
